# ImguiWidgets

./: .gitmodules  CMakeLists.txt  README.md
doc/: Emscripten.md
examples/docker/: BuildDocker.sh  README.md  RunServices.sh  SetupKeys.sh  StartDocker.sh  dockerfile  nginx.conf
include/fr/: ImguiWidgets.h
include/fr/Imgui/: ActorWindow.h  AllWindows.h  CommitableNodeWindow.h  CompletedWindow.h  EffortWindow.h  EmailAddressWindow.h  EventWindow.h  GoalWindow.h  GraphNodeWindow.h  GridWindow.h  InternationalAddressWindow.h  KeyValueWindow.h  NodeAnchor.h  NodeEditorWindow.h  NodeWindow.h  OrganizationWindow.h  PersonWindow.h  PhoneNumberWindow.h  ProductWindow.h  ProjectWindow.h  PurposeWindow.h  Registration.h  RequirementWindow.h  RestLocator.h  RoleWindow.h  StoryWindow.h  TextWindow.h  TimeEstimateWindow.h  USAddressWindow.h  UseCaseWindow.h  Widget.h  WidgetApi.h  Window.h  WindowFactory.h  WindowFactoryWindow.h
src/: ImGuiDatePickerWrapper.cpp  NodeAnchor.cpp  NodeEditorWindow.cpp  NodeWindow.cpp
src/opengl/: main.cpp
src/vulkan/: main.cpp
